style (Footer): fix unreadable link color

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,14 @@
 .footer {
-    position: relative;
+  position: relative;
 
-    padding: 64px;
-    
+  padding: 64px;
+
+  color: white;
+  text-align: center;
+
+  background: hsl(0deg, 0%, 5%);
+
+  a {
     color: white;
-    text-align: center;
-    
-    background: hsl(0deg, 0%, 5%);
   }
+}
